[package]
name = "diesel-async"
version = "0.2.2"
authors = ["Georg Semmler <github@weiznich.de>"]
edition = "2018"
autotests = false
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/weiznich/diesel_async"
keywords = ["orm", "database", "sql", "async"]
categories = ["database"]
description = "An async extension for Diesel the safe, extensible ORM and Query Builder"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "~2.0.0", default-features = false, features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"]}
async-trait = "0.1.51"
futures = "0.3.17"
tokio-postgres = { version = "0.7.2", optional = true}
tokio = { version = "1.26", optional = true}
mysql_async = { version = ">=0.31.0,<0.33", optional = true, default-features = false}
mysql_common = {version = ">=0.30.0,<0.31.0", optional = true, default-features = false}
flate2 = { version = "*", optional = true, default-features = false }

bb8 = {version = "0.8", optional = true}
deadpool = {version = "0.9", optional = true}
mobc = {version = ">=0.7,<0.9", optional = true}
scoped-futures = {version = "0.1", features = ["std"]}

bitflags = "=2.1" # TODO: remove me. only temporarily needed due to https://github.com/blackbeam/rust_mysql_common/issues/87

[dev-dependencies]
tokio = {version = "1.12.0", features = ["rt", "macros", "rt-multi-thread"]}
cfg-if = "1"
chrono = "0.4"
diesel = { version = "2.0.0", default-features = false,  features = ["chrono"]}

[features]
default = []
mysql = [] # TODO: remove me. just temporary to avoid changing cfg(feature) while still deciding upon feature structure
mysql-native-tls = ["diesel/mysql_backend", "mysql_async", "mysql_async/default", "mysql_common", "mysql_common/default", "flate2"]
mysql-rustls = ["diesel/mysql_backend", "mysql_async", "mysql_async/rustls-tls", "mysql_common", "mysql_common/bigdecimal", "mysql_common/rust_decimal", "mysql_common/time", "mysql_common/frunk", "mysql_common/derive", "flate2", "flate2/rust_backend"]
postgres = ["diesel/postgres_backend", "tokio-postgres", "tokio", "tokio/rt"]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[package.metadata.docs.rs]
features = ["postgres", "mysql", "deadpool", "bb8", "mobc"]
no-default-features = true
rustc-args = ["--cfg", "doc_cfg"]
rustdoc-args = ["--cfg", "doc_cfg"]
